UNITSOFMEASUREMENT-179: Code formatting
Task-Url: https://java.net/jira/browse/UNITSOFMEASUREMENT-179